refactor: update source code